--- a/Pregunta 3.ipynb
+++ b/Pregunta 3.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pregunta 3: Convolutional Neural Network (CNN) en CIFAR."
+    "# Pregunta 3: Convolutional Neural Network (CNN) en CIFAR.\n",
+    "\n",
+    "En esta sección trabajaremos con un dataset bastante conocido y utilizado por la comunidad para experimentar con reconocimiento de objetos en imágenes: CIFAR10 [3]. Se trata de un conjunto de 60.000 imágenes RGB de 32 × 32 pixeles que contiene 10 clases de objetos y 6000 ejemplos por clase. La versión utilizada se atribuye a A. Krizhevsky, V. Nair y G. Hinton y viene separada en 50000 ejemplos de entrenamiento y 10000 casos de prueba. El conjunto de pruebas fue obtenido seleccionando 1000 imágenes aleatorias de cada clase. Los datos restantes han sido ordenados aleatoriamente y están organizados en 5 bloques de entrenamiento (batches). Las clases son mutuamente excluyentes y corresponden a las siguientes categorı́as: gatos, perros, ranas, caballos, pájaros, ciervos, aviones, automóviles, camiones y barcos. Para esta tarea se experimentará con redes convolucionales, conocidas como CNNs ó ConvNets."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Construya una función que cargue todos los bloques de entrenamiento y pruebas del problema CIFAR generando como salida: (i) dos matrices $X_{tr}$, $Y_{tr}$, correspondientes a las imágenes y etiquetas de entrenamiento, (ii) dos matrices $X_t$ , $Y_t$ , correspondientes a las imágenes y etiquetas de pruebas, y finalmente (iii) dos matrices $X_v$,$Y_v$, correspondientes a imágenes y etiquetas que se usarán como conjunto de validación, es decir para tomar decisiones de diseño acerca del modelo. Este último conjunto debe ser extraı́do desde el conjunto de entrenamiento original y no debe superar las 5000 imágenes."
+    ">a) Construya una función que cargue todos los bloques de entrenamiento y pruebas del problema CIFAR generando como salida: (i) dos matrices $X_{tr}$, $Y_{tr}$, correspondientes a las imágenes y etiquetas de entrenamiento, (ii) dos matrices $X_t$ , $Y_t$ , correspondientes a las imágenes y etiquetas de pruebas, y finalmente (iii) dos matrices $X_v$,$Y_v$, correspondientes a imágenes y etiquetas que se usarán como conjunto de validación, es decir para tomar decisiones de diseño acerca del modelo. Este último conjunto debe ser extraı́do desde el conjunto de entrenamiento original y no debe superar las 5000 imágenes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se hace un shuffle y se sacan los ultimos 5000 desde el entrenamiento para hacer el conjunto de validación"
+    "Primero, se cargar las librerias necesarias para trabajar con redes neuronales, y otras para operaciones matemáticas y graficar datos."
    ]
   },
   {
@@ -55,6 +57,15 @@
     "from keras.callbacks import LearningRateScheduler\n",
     "from keras.utils import plot_model\n",
     "from keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se preparan las variables que contienen la información de las imágenes, separándose en tres conjuntos: entrenamiento, validación y prueba. Antes de separar el conjunto de entrenamiento del de validación se desordenan los datos, pues estos podrían venir ordenados según sus etiquetas o algún otro orden preliminar. Al no hacer esto se escogerían datos de la misma clase para el conjunto de validación. Así el conjunto de entrenamiento tendrá 45.000 ejemplos, el de validación 5.000 y el de prueba 10.000 elementos.\n",
+    "\n",
+    "Para el entrenamiento de las redes se utilizará una GPU (Nvidia Geforce 840M) debido a los largos tiempo procesamiento y que estas unidades trabajan mejor realizando operaciones sobre matrices que las CPU. "
    ]
   },
   {
@@ -119,24 +130,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "seria bueno visualizar las imagenes~"
+    "#seria bueno visualizar las imagenes~"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Prepare subconjuntos de entrenamiento, validación y pruebas normalizando las imágenes de entrenamiento y pruebas, dividiendo las intensidades originales de pixel en cada canal por 255. Es importante recordar que ahora se trabajará con la estructura original de los datos, por lo que es necesario recuperar la forma original de las imágenes del vector en el archivo en que vienen. Además, si desea trabajar con el orden de las dimensiones denominado ’tf’ (por defecto para TensorFlow) deberá hacer realizar la transposición correspondiente. Finalmente, genere una representación adecuada de las salidas deseadas de la red."
+    ">b) Prepare subconjuntos de entrenamiento, validación y pruebas normalizando las imágenes de entrenamiento y pruebas, dividiendo las intensidades originales de pixel en cada canal por 255. Es importante recordar que ahora se trabajará con la estructura original de los datos, por lo que es necesario recuperar la forma original de las imágenes del vector en el archivo en que vienen. Además, si desea trabajar con el orden de las dimensiones denominado ’tf’ (por defecto para TensorFlow) deberá hacer realizar la transposición correspondiente. Finalmente, genere una representación adecuada de las salidas deseadas de la red."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normalizando cada canal por 255"
+    "Cada subconjunto formado en el paso anterior es divido por 255.0 para llevar los datos a un rango \\[0,1\\]."
    ]
   },
   {
