--- a/Pregunta 3.ipynb
+++ b/Pregunta 3.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación se preparan las variables que contienen la información de las imágenes, separándose en tres conjuntos: entrenamiento, validación y prueba. Antes de separar el conjunto de entrenamiento del de validación se desordenan los datos, pues estos podrían venir ordenados según sus etiquetas o algún otro orden preliminar. Al no hacer esto se escogerían datos de la misma clase para el conjunto de validación. Así el conjunto de entrenamiento tendrá 45.000 ejemplos, el de validación 5.000 y el de prueba 10.000 elementos.\n",
+    "A continuación se preparan las variables que contienen la información de las imágenes, separándose en tres conjuntos: entrenamiento, validación y prueba. Antes de separar el conjunto de entrenamiento del de validación se desordenan los datos, pues estos podrían venir ordenados según sus etiquetas o algún otro orden preliminar. Al no hacer esto se escogerían datos de la misma clase para el conjunto de validación. Así el conjunto de entrenamiento tendrá 45.000 ejemplos, el de validación 5.000 y el de prueba 10.000 elementos. Estos ejemplos pueden pertenecer a una de las 10 etiquetas enumeradas del 0 al 9 en el siguiente orden: **airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck.**\n",
     "\n",
     "Para el entrenamiento de las redes se utilizará una GPU (Nvidia Geforce 840M) debido a los largos tiempo procesamiento y que estas unidades trabajan mejor realizando operaciones sobre matrices que las CPU. "
    ]
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada subconjunto formado en el paso anterior es divido por 255.0 para llevar los datos a un rango \\[0,1\\]."
+    "Cada subconjunto formado en el paso anterior es normalizado, diviendo por 255.0 para llevar los datos a un rango \\[0,1\\]."
    ]
   },
   {
@@ -188,7 +188,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las imagenes se transforman en sus dimensiones originales y las etiquetas se transforman a one-hot vector"
+    "Las imagenes se transforman a sus dimensiones originales, es decir, cada imagen está representada por tres matrices cuadradasde 32x32. Cada una representa un canal R, G y B. Esta transformación es necesaria para utilizar capas convolucionales en la red neuronal.\n",
+    "\n",
+    "Por otro lado, las etiquetas también deben ser etiquetadas como un *one hot vector*, dado que este es un problema de clasificación excluyente. Así, cada imagen tendrá un vector asociado que tendrá solo un 1 en la clase a la que corrresponde, y el resto serán 0.\n"
    ]
   },
   {
@@ -240,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Defina una CNN con arquitectura $C \\times P \\times C \\times P \\times F \\times F$. Para ambas capas convolucionales utilice 64 filtros de $3 \\times 3$ y funciones de activación ReLu. Para las capas de pooling utilice filtros de $2 \\times 2$ con stride 2. Para la capa MLP escondida use 512 neuronas. Genere un esquema lo más compacto posible que muestre los cambios de forma (dimensionalidad) que experimenta un patrón de entrada a medida que se ejecuta un forward-pass y el número de parámetros de cada capa."
+    ">c) Defina una CNN con arquitectura $C \\times P \\times C \\times P \\times F \\times F$. Para ambas capas convolucionales utilice 64 filtros de $3 \\times 3$ y funciones de activación ReLu. Para las capas de pooling utilice filtros de $2 \\times 2$ con stride 2. Para la capa MLP escondida use 512 neuronas. Genere un esquema lo más compacto posible que muestre los cambios de forma (dimensionalidad) que experimenta un patrón de entrada a medida que se ejecuta un forward-pass y el número de parámetros de cada capa."
    ]
   },
   {
@@ -250,14 +252,16 @@
     "Definición de arquitectura:\n",
     "* C: Capa convolucional\n",
     "* P: Capa de pooling\n",
-    "* F: Cada MLP como las de Feef Forward"
+    "* F: Cada MLP como las de Feed Forward\n",
+    "\n",
+    "Así, la arquitectura de la *Convolutional Neural Network* (CNN) red queda compuesta por las siguientes capas: Convolucional -> Pooling -> Convolucional -> Pooling -> Feed Forward -> Feed Forward. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -310,6 +314,19 @@
     "model.add(Dense(10))\n",
     "model.add(Activation('softmax'))\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El input es recibido por la primera capa de convolución la cual tiene 64 filtros y cada uno es de tamaño 3x3. La función de esta capa es la extracción de características relevantes de cada imagen. Luego, se le aplica una función de activación ReLU a cada filtro. Después viene una capa de max pooling la cual realiza una reducción de dimensionalidad al seleccionar la característica más importante representada por el valor máximo que se encuentra en el espacio de 2x2 del filtro. Este proceso se repite para la siguiente capa de convolución (tercera capa) y pooling (cuarta capa).\n",
+    "\n",
+    "Una vez que se han encontrado las características relevantes más importantes del input se introduce una capa altamente densa altamente conectada, como las que se ulitizan en las redes Feed Forward para considerar todas las permutaciones sobre estas características, y con esto, poder predecir la clase a la cual la imagen pertenece. Esta capa densa tiene 512 neuronas, a la cual se le aplica una función de activación ReLU.\n",
+    "\n",
+    "Para finalizar la arquitectura de la red, se tiene una capa de 10 neuronas, donde cada una entrega la probabilidad de que una imagen input pertenezca a cierta clase gracias a la función de activación softmax. Esto asegura que la suma de las probabilidades sobre todas las clases sumen 1.\n",
+    "\n",
+    "\n"
    ]
   },
   {
