--- a/Pregunta 2.ipynb
+++ b/Pregunta 2.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Se trabajará con las etiquetas escaladas uniformemente, es decir, $\\mu=0$ y $\\sigma=1$, ajuste sobre el conjunto de entrenamiento y transforme éstas además de las de pruebas."
+    ">a) Se trabajará con las etiquetas escaladas uniformemente, es decir, $\\mu=0$ y $\\sigma=1$, ajuste sobre el conjunto de entrenamiento y transforme éstas además de las de pruebas."
    ]
   },
   {
@@ -602,7 +602,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "f) Pruebe con utilizar una red shallow (poco profunda), es decir, sitúe todas las neuronas en una única capa ¿Qué sucede con la convergencia del algoritmo? ¿Por qué sucede este fenómeno?"
+    ">f) Pruebe con utilizar una red shallow (poco profunda), es decir, sitúe todas las neuronas en una única capa ¿Qué sucede con la convergencia del algoritmo? ¿Por qué sucede este fenómeno?\n",
+    "\n",
+    "Se experimentará con dos redes, una con función de activación Relu y otra Sigmoidal, con el fin de comparar los resultados. La primera será la red con 1000 neuronas en su capa oculta y función de activación ReLU. Se entrena y luego se grafican sus resultados."
    ]
   },
   {
@@ -1248,7 +1250,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1270,6 +1274,15 @@
     "plt.legend(['Train set', 'Test set'])\n",
     "plt.title('MSE Shallow network with ReLU')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para esta arquitectura, se mantiene el comportamiento de redes anteriores que decaen con gran velocidad hasta alcanzar un punto de convergencia de 0.18 y 0.5 para las pruebas y entrenamiento respectivamente. No se produce divergencia. Al ocupar 1000 neuronas con ReLU sería parecido a hacer una gran combinación lineal, o función lineal, de los datos de entrada para generar el output. Es por esto que los resultados son buenos, pudiendo el modelo recuperar las características importantes de los datos. Al ocupar más neuronas en la capa se pueden aprender más características de los datos de entrenamiento para predecir datos futuros. El problema es que, a pesar de lo descrito anteriormente, el error de prueba sigue siendo alto. Por lo tanto hay un sobreajuste a los datos de entrenamiento.\n",
+    "\n",
+    "Siguiendo con el experimento, se probará con una red confunción de activación sigmoidal."
    ]
   },
   {
@@ -1302,6 +1315,17 @@
     "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
     "hist_shallow = model.fit(X_train_scaled, y_train, epochs=5,\n",
     "    verbose=1, validation_data=(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función sigmoidal no funciona en este tipo de arquitectura pues no logra capturar las características importantes de los datos de entrada. Los resultados arrojan un desempeño paupérrimo divergiendo al en los primeros epochs. Por lo tanto, la arquitectura puede tener buenos como malos resultados dependiendo de las funciones e hiper-parámetros utilizados.\n",
+    "\n",
+    "Tener múltiples capas hace que la red sea capaz de reconocer ciertos aspectos de los datos de entrada. Así, ciertas capas se especializarán en reconocer patrones específicos en los datos. Con esto no será necesario tener tantas neuronas por capa pues la carga de trabajo estará distribuida a través de las capas.\n",
+    "\n",
+    "En el caso de una red con una capa, ésta podrá aprender de la misma forma las características importantes de un conjunto de entrenamiento, sin embargo, requerirá más neuronas para esta tarea. Por lo tanto, hay un trade-off en el entrenamiento de redes en seleccionar la cantidad de capas a ocupar y como se distribuirán las neuronas en estas capas de trabajo. Es más fácil entrenar redes con pocas capas pero estas pueden generalizar poco, y es más costoso entrenar redes muy profundas pero estarán más especializadas y generalizarán mejor. No olvidar que las selecciones de construcción de cada arquitectura también tienen impacto en el resultado, pues como se mencionó anteriormente, una red de una capa con función sigmoidal tuvo buenos resultados en comparación a la red con función sigmoidal que divergió al comienzo del entrenamiento."
    ]
   }
  ],
