--- a/Pregunta 2.ipynb
+++ b/Pregunta 2.ipynb
@@ -595,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con la inicialización He los pesos parten con valores altos pero luego del entrenamiento cambian casi en dos órdenes de magnitud"
+    "Con la inicialización He los pesos parten con valores altos pero luego del entrenamiento cambian casi en dos órdenes de magnitud, pero en comparación a los métodos anteriores alcanza una menor varianza por lo que se puede considerar un buen resultado."
    ]
   },
   {
