--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -928,7 +928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para la misma arquitectura, entrenada con la función de activación ReLU se consiguen errores más bajos que con la arquitectura sigmoidal. Primero, los errores en los primeros epochs son más bajos que los de la red anterior, partiendo en este caso en valores a 0.9, que en el caso anterior eran sobre este número e incluso sobre 1.0 para el entrenamiento. El descenso se produce con mayor velocidad que en el caso anterior, viendo como antes de los 50 epochs ya se llega a un valor cercano a su convergencia.\n",
+    "Para la misma arquitectura, entrenada con la función de activación ReLU se consiguen errores más bajos que con la arquitectura sigmoidal. Primero, los errores en los primeros epochs son más bajos que los de la red anterior, partiendo en este caso en valores a 0.9, que en el caso anterior eran sobre este número e incluso sobre 1.0 para el entrenamiento. El descenso se produce con mayor velocidad que en el caso anterior, viendo como antes de los 50 epochs ya se llega a un valor cercano a su convergencia. \n",
     "\n",
     "Los valores finales para el MSE de entrenamiento y test son aproximadamente 0.08 y 0.25 respectivamente, los que son menores a los encontrados con la función de activación sigmoidal. Un fenómeno interesante es que la diferencia de los errores, para ambas arquitecturas, se mantiene constante a partir de cierto epoch. Nuestra suposición es que la red al sobreajustar ciertas características del set de entrenamiento, cuando se evaluan nuevos ejemplos, como los de test, este sobreajuste hace que la predicción cometa errores repetidamente sobre estas mismas características.\n",
     "\n",
@@ -1073,8 +1073,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-  con bajos vloes se demra más en converger como en la linea azul ya que explora el espacio de búsqueda entorno a la inicialización, moviendose a pasos más pequeños en la dirección del gradiente.\n",
-    "\n",
     "De los gráficos anteriores se puede ver el mismo comportamiento, que con valores bajos de learning rate (líneas de color azul) la convergencia es mucho más lenta que con valores altos (líneas grises) llegando el primero a un valor de cercano de 0.6 y la segunda a 0.25, en el caso de la arquitectura con función sigmoidal. En la red con función ReLU ocurre algo similar donde con un learing rate de 0.015 se alcanza una convergencia al rededor de 0.1. Por lo tanto, al utilizar valores bajos se explora el espacio de búsqueda entorno a la inicialización, moviendose a pasos más pequeños en la dirección del gradiente, teniendo una velocidad inferior a la de un learning rate más alto. Pero por otro lado, al tener un alto learning rate se puede guiar el gradiente en pasos más grandes hacia un óptimo local de peor calidad que el que quizas guiaría una tasa de aprendizaje más bajo.\n",
     "\n",
     "Como se evidenció en el punto b) y c) el decaimiento del error para la función ReLU tuvo una mayor rápidez en comparación de la función sigmoidal, consiguiendo nuevamente valores más bajos de MSE. Además, para valores altos de learning rate se vuelve a generar una alta varianza en los modelos de función sigmoidal, lo que se visualiza en los picos que se dan a través de sus curvas, lo que no están en el segundo gráfico.\n",
@@ -1808,7 +1806,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación se entrenarán las redes estudiadas utilizando dropout, que es una técnica utilizada para reducir el efecto de overfitting. El valor de dropout indica el porcentaje de la capa saliente que son asignadas con cero."
+    "A continuación se entrenarán las redes estudiadas utilizando dropout, que es una técnica utilizada para reducir el efecto de overfitting. El valor de dropout indica el porcentaje de la capa saliente que son asignadas con cero.\n",
+    "\n",
+    "Primero se entrega le resultado de las redes sin dropout."
    ]
   },
   {
@@ -1849,6 +1849,13 @@
     "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
     "model.fit(X_train_scaled, y_train_scaled, epochs=300, verbose=0)\n",
     "print(\"Test loss for ReLU: \", model.evaluate(X_test_scaled, y_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se define un modelo dropout_network con función dropout con parámetro variable."
    ]
   },
   {
