--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -142,7 +142,9 @@
     "\n",
     "Luego de saber en que consiste cada variable, se presenta la descripción de los datos con estadísticos de importancia, como la media, desviación estandar, cuartiles y valores min/max. Para mejorar la predicción de los modelos, disminuyendo la alta varianza de los datos, se escoge por normalizar los datos ocupando el StandarScaler de sklearn.\n",
     "\n",
-    "Se debe hacer un tratamiento con la variable *CHAS* pues es un valor binario que se activa cuando una casa queda cerca del río, y se apaga en el caso contrario. Este comportamiento puede generar problemas matemáticos en el modelo al considerarse una propiedad positiva o negativa, lo que afecta al precio final de la casa. Es por esto que se crean dos variables, *CHAS_0* y *CHAS_1*, para los casos positivos en que se esté en las cercanías del rio y una para los casos negativos, es decir, las casas que no están cerca del rio. Así, siempre una de las variables tomará el valor de 1 y la otra 0."
+    "Se debe hacer un tratamiento con la variable *CHAS* pues es un valor binario que se activa cuando una casa queda cerca del río, y se apaga en el caso contrario. Este comportamiento puede generar problemas matemáticos en el modelo al considerarse una propiedad positiva o negativa, lo que afecta al precio final de la casa. Como no hay un orden númerico en que una de las dos opciones vale más que la otra (\n",
+    "\n",
+    "Es por esto que se crean dos variables, *CHAS_0* y *CHAS_1*, para los casos positivos en que se esté en las cercanías del rio y una para los casos negativos, es decir, las casas que no están cerca del rio. Así, siempre una de las variables tomará el valor de 1 y la otra 0."
    ]
   },
   {
